<?xml version="1.0"?>
<package format="2">
 <name>mbot_nlu_pytorch</name>
 <version>1.0.0</version>
 <description>
 Pytorch implementation of the nlu model.
 The model is built on Google's BERT, with two more downstream
 heads; 1 for NER and one 1 classification.
 </description>

 <license>GPLv3</license>

<maintainer email="joao.barroca@tecnico.ulisboa.pt">Joao Barroca</maintainer>

  <author email="joao.barroca@tecnico.ulisboa.pt">Joao Barroca</author>


 <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

</package>
